# SafeClaw

./: .gitignore  README.md  default.config.yaml  demo.py  pyproject.toml
.claude/: settings.local.json
docs/: arch.mmd  flow.mmd
src/safeclaw/: __init__.py  __main__.py  cli.py  config.py  hook.py  mcp_server.py  models.py  pipeline.py  redactor.py  server.py
src/safeclaw/patterns/: __init__.py  base.py  credentials.py  financial.py  personal.py
