[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safeclaw-guard"
version = "0.1.0"
description = "Universal outbound data guard for AI agents — regex-first NER pipeline, zero ML weight, runs everywhere."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["security", "pii", "ner", "ai-agent", "claude-code", "mcp", "data-guard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # async test client for FastAPI
    "ruff>=0.3",
]

[project.scripts]
safeclaw = "safeclaw.cli:app"

[project.urls]
Repository = "https://github.com/safeclaw/safeclaw"

[tool.hatch.build.targets.wheel]
packages = ["src/safeclaw"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
